bloonix-webgui (0.77) released at 2015-11-25

    * Fixed access to hosts/registered/count for role user.

bloonix-webgui (0.76) released at 2015-11-25

    * Fixed content type and output for routes /operateas and /logout.

bloonix-webgui (0.75) released at 2015-11-15

    * Change: Field "description" of hosts is now an optional parameter.
    * New Feature: It's now possible to configure the authkey for each
      location in the webgui.
    * Kicked deprecated host parameters: hw_manufacturer, hw_product
      os_manufacturer, os_product, virt_manufacturer,j virt_product,
      location.
    * Implemented Bloonix::NetAddr to change IP ranges.
    * Implemented the feature to set bloonix into maintenance.

bloonix-webgui (0.74) released at 2015-09-18

    * Fixed null values in host view.

bloonix-webgui (0.73) released at 2015-09-18

    * Updated host view fields.

bloonix-webgui (0.72) released at 2015-09-18

    * Fixed: ipaddr6 is now a optional field.

bloonix-webgui (0.71) released at 2015-09-18

    * Filter by host classes are now case sensitive.

bloonix-webgui (0.70) released at 2015-09-17

    * Fixed class search if whitespaces are in the class name.

bloonix-webgui (0.69) released at 2015-09-17

    * Fixed different column in table dependency and allow null values.
    * Add new host columns os_class, hw_class and env_class.

bloonix-webgui (0.68) released at 2015-09-08

    * Improved the order for host lists, so that hosts that were not OK
      in the last 60 minutes are displayed before all other hosts.
    * Fixed duplicate pager at the bottom of some tables.
    * Fixed host form, so that only groups are selectable in which
      the user is a member.
    * Sort services by service name in templates.

bloonix-webgui (0.67) released at 2015-09-06

    * Kicked default Host classes.
    * Added the possibility to configure the monitoring screen.

bloonix-webgui (0.66) released at 2015-09-06

    * Increased chart alignment from 3 to 8.