@@ -1,3 +1,8 @@
+bloonix-webgui (0.78) released at 2015-11-25
+
+    * Fixed dashboard resizing.
+    * Disallow host registrations for company id 1.
+
 bloonix-webgui (0.77) released at 2015-11-25
 
     * Fixed access to hosts/registered/count for role user.
